fix: filter area too small

--- a/src/app/pages/notices/notices-list/notices-list.component.scss
+++ b/src/app/pages/notices/notices-list/notices-list.component.scss
@@ -13,6 +13,7 @@
     max-height: calc(100vh);
     overflow-y: auto;
     overflow-x: hidden;
+    flex-shrink: 0;
 }
 
 .filter {
